<resources>
    <string name="app_name">VoiceNotes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="defaultTimeText">00:00.00</string>
    <string name="custom_bottom_menu_title">Сохранить запись</string>
    <string name="custom_bottom_menu_edittext_default_text">1 мар., 18.10</string>
    <string name="deleteText">Удалить</string>
    <string name="OkText">Ок</string>
    <string name="note_title_text">Заголовок заметки:</string>
    <string name="searchNoteHint">я помогу найти заметку</string>
    <string name="defaultTimerText">00:00.0</string>
    <integer name="com_vk_sdk_AppId">51572449</integer>
    <string name="succesAuthMsg">Авторизация прошла успешно</string>
    <string name="failedAuthMsg">Упс... Что-то пошло не так, попробуйте заново</string>
    <string name="msg_note_deleted">Запись удалена</string>
    <string name="msg_note_canceled">Запись отменена</string>
    <string name="msg_asking_to_delete">Удалить заметку?</string>
    <string name="delete">Удалить</string>
    <string name="cancel">Оставить</string>
    <string name="auth_via_vk_id">auth via vk identificator</string>
    <string name="vk_id">vk id</string>
    <string name="authorization_using">authorization using:</string>
    <string name="continue_without_authorization">continue without authorization</string>
    <string name="sign_in_firebase">sign in firebase</string>
    <string name="sign_up_firebase">sign up firebase</string>
    <string name="connecting_msg">connecting...</string>
</resources>