<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/place_holder"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.screens.AuthorizationActivity">

    <ImageView
        android:id="@+id/imAccount"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/sym_def_app_icon" />

    <ImageButton
        android:id="@+id/button_exit_from_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:background="@drawable/ic_exit_from_account"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonSignInVK"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/color_blue_vk_sign"
        android:fontFamily="@font/vk_sans_display_bold"
        android:text="@string/vk_id"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/buttonSignInFirebase"
        android:visibility="gone"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/color_blue_vk_sign"
        android:fontFamily="@font/vk_sans_display_bold"
        android:text="@string/sign_in_firebase"
        android:textSize="12sp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/buttonSignInVK"
        app:layout_constraintStart_toStartOf="@+id/buttonSignInVK"
        app:layout_constraintTop_toBottomOf="@+id/buttonSignInVK" />

    <Button
        android:id="@+id/buttonSignUpFirebase"
        android:layout_width="180dp"
        android:visibility="gone"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/color_blue_vk_sign"
        android:fontFamily="@font/vk_sans_display_bold"
        android:text="@string/sign_up_firebase"
        android:textSize="12sp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/buttonSignInFirebase"
        app:layout_constraintStart_toStartOf="@+id/buttonSignInFirebase"
        app:layout_constraintTop_toBottomOf="@+id/buttonSignInFirebase" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="236dp"
        android:fontFamily="@font/vk_sans_display_regular"
        android:text="@string/authorization_using"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonSkipAuth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/color_blue_vk_sign"
        android:text="@string/continue_without_authorization"
        android:fontFamily="@font/vk_sans_display_regular"
        android:textSize="13sp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>